# saysiyat-textkit

./: README.md  example.txt  pipeline.ipynb  pyproject.toml
src/saysiyat_textkit/: __init__.py  cli.py  config.py  normalization.py  pipeline.py  segmentation.py  tagging.py  utils.py
src/saysiyat_textkit/data/: affixes.json
src/stk/: __init__.py  normalization.py  pipeline.py  segmentation.py  tagging.py  utils.py
src/stk/data/: affixes.json  lexicon.tsv
tests/: test_smoke.py
